syntax = "proto2";

/* Copyright 2021 Danny McClanahan */
/* SPDX-License-Identifier: AGPL-3.0-only */

package grouplink.proto.identity;

/* Serialization of [super::ExternalIdentity].
 *
 * This struct is a component of [crate::session::proto::PreKeyBundle]. */
message Address {
  /* From [super::ExternalIdentity::name] unmodified. */
  optional string name = 1;
  /* From [super::ExternalIdentity::device_id] unmodified. */
  optional uint32 device_id = 2;
}
